--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,23 @@
         <version>1.7.25</version>
     </dependency>
     </dependencies>
+    <build>
+  <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <archive>
+            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+          </archive>
+          <archive>
+            <manifest>
+                <mainClass>echecs.Main</mainClass>
+            </manifest>
+            </archive>
+        </configuration>
+      </plugin>
+  </plugins>
+</build>
 </project>
