--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
       <version>1.9.5</version>
       <scope>test</scope>
     </dependency>
+            <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>1.0.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
   <plugins>
